# gitgauge

./: .dockerignore  .env  .gitignore  README.md  app.py  docker-compose.yml  output.json  pyproject.toml
analysis_service/: Dockerfile  app.py  cache.py  models.py  requirements.txt
backend/: Dockerfile  app.py  requirements.txt
database/: Dockerfile  init.sql
nginx/: nginx.conf  nginx.conf.http-only
scripts/: SSL_SETUP.md  obtain-certificate.sh  renew-certificate.sh
