[project]
name = "gitgauge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.6",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "flask>=3.1.2",
    "httpx>=0.28.1",
    "pyqt5>=5.15.11",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
